--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
 	"alias": "airbauer.ch",
 	"cleanUrls": true,
 	"public": true,
-	"regions": ["FRA50"],
+	"regions": ["HAM50-P1"],
 	"redirects": [
 		{ "source": "/cv", "destination": "https://read.cv/airbauer" },
 		{ "source": "/github", "destination": "https://github.com/real-airbauer" },
