--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "https://openapi.vercel.sh/vercel.json",
 	"version": 2,
-	"alias": "airbauer.ch",
+	"alias": "www.airbauer.ch",
 	"cleanUrls": true,
 	"public": true,
 	"regions": ["lhr1"],
