--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,7 @@
 		{ "source": "/keybase", "destination": "https://keybase.com/airbauer" },
 		{ "source": "/discord", "destination": "https://discord.com/users/549207539544227846" },
 		{ "source": "/porn", "destination": "https://de.pornhub.com" },
+		{ "source": "/porn", "destination": "https://de.pornhub.com" },
 		{
 			"source": "/contact",
 			"destination": "mailto:airbauer@proton.me"
